Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21170

Galera test failure on galera_sr.GCF-1043[A|B]

    XMLWordPrintable

Details

    Description

      2019-11-25T13:42:42.3849106Z galera_sr.GCF-1043A 'innodb'             w2 [ fail ]
      2019-11-25T13:42:42.3849881Z         Test ended at 2019-11-25 13:42:42
      2019-11-25T13:42:42.3850368Z 
      2019-11-25T13:42:42.3852347Z CURRENT_TEST: galera_sr.GCF-1043A
      2019-11-25T13:42:42.3852994Z mysqltest: In included file "./suite/galera/include/galera_concurrent_test.inc": 
      2019-11-25T13:42:42.3854613Z included from /__w/1/s/mysql-test/suite/galera_sr/t/GCF-1043A.test at line 14:
      2019-11-25T13:42:42.3855972Z At line 76: query 'reap' failed with wrong errno 1047: 'WSREP has not yet prepared node for application use', instead of 0...
      2019-11-25T13:42:42.3856665Z 
      2019-11-25T13:42:42.3857220Z The result from queries just before the failure was:
      2019-11-25T13:42:42.3857606Z < snip >
      2019-11-25T13:42:42.3857971Z connect node_1a, 127.0.0.1, root, , test, $NODE_MYPORT_1;
      2019-11-25T13:42:42.3858356Z Running a concurrent test with the following queries:
      2019-11-25T13:42:42.3858731Z DELETE FROM t1
      2019-11-25T13:42:42.3859371Z REPLACE INTO t1 VALUES (1,'y'),(2,'x')
      2019-11-25T13:42:42.3860124Z REPLACE INTO t1 VALUES (1,'y'),(2,'y'),(3,'y')
      2019-11-25T13:42:42.3860611Z connection node_1;
      2019-11-25T13:42:42.3860991Z DROP TABLE IF EXISTS t1;
      2019-11-25T13:42:42.3861644Z CREATE TABLE t1 (f1 INTEGER PRIMARY KEY AUTO_INCREMENT, f2 CHAR(255)) ENGINE=InnoDB;
      2019-11-25T13:42:42.3862064Z SET SESSION wsrep_sync_wait = 0;
      2019-11-25T13:42:42.3862505Z SET SESSION wsrep_trx_fragment_size = 1;;;
      2019-11-25T13:42:42.3862884Z connection node_1a;
      2019-11-25T13:42:42.3863783Z SET SESSION wsrep_sync_wait = 0;
      2019-11-25T13:42:42.3864245Z SET SESSION wsrep_trx_fragment_size = 1;;;
      2019-11-25T13:42:42.3864644Z connection node_2;
      2019-11-25T13:42:42.3865033Z SET SESSION wsrep_sync_wait = 0;
      2019-11-25T13:42:42.3865430Z SET SESSION wsrep_trx_fragment_size = 1;;;
      

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d
                1d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.