MDEV-21170 : Galera test failure on galera_sr.GCF-1043[A|B]

Add error printout when mysql.wsrep_streaming_log lock
fails. However, tests are very undeterministic and not
suitable for mtr environment. Thus, they are removed.